# viewer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_em.sh  clang-format-all.sh  paste_test.txt  publish.sh  todo.md
docs/: index.html  viewer.js
gh-pages/: viewer.html  viewer.js
html/: client.html
src/: .clang-format-ignore  CMakeLists.txt
src/glad/include/glad/: gl.h
src/viewer/: App.cpp  App.h  AppState.cpp  AppState.h  CMakeLists.txt  Event.cpp  Event.h  SceneToRender.cpp  SceneToRender.h  UI.cpp  UI.h  import3d.cpp  import3d.h  main.cpp
src/viewer/ui/: Renderer.cpp  Renderer.h  UI.cpp  UI.h
src/viewer/util/: Camera.cpp  Camera.h  Clipboard.cpp  Clipboard.h  SDLApp.h  UserInputTo3DNavigation.cpp  UserInputTo3DNavigation.h  emscripten_browser_clipboard.h  emscripten_browser_clipboard2.h  gl_util.cpp  gl_util.h  glm_util.h  http.cpp  http.h  imgui_backend.cpp  imgui_backend.h  opengl_imgui_headers.h  sdl3_opengl3_imgui.cpp  sdl3_opengl3_imgui.h  sdl_util.cpp  sdl_util.h
